--- a/index.html
+++ b/index.html
@@ -8,26 +8,30 @@
   <title>Pig dice</title>
 </head>
 <body>
+  <br>
+  <br>
   <div class="container">
-    <br>
-    <br>
-    <div class="row">
+    <div class="container"
+      <!-- <div class="row">
       
       <div class="column1" id="column1"> 
         <h3><strong>Player 1 Total Score:<span id="player1TotalScore"></span></strong></h3>
         <h3><strong>Player 1 Score:<span id="player1Score"></span></strong></h3>
-        <h3><strong>Player 1 last roll:<span id="player1LastRoll"></span></strong></h3>
+        <h3><strong>Player 1 dice 1:<span id="player1LastRoll"></span></strong></h3>
+        <h3><strong>Player 1 dice 2:<span id="player1Roll2"></span></strong></h3>
         <br>
-        <button id="button1" type="click" class="btn-success btn btn-success">player one roll</button>
+        <button id="button1" type="click" class="btn-success btn btn-success">player 1 roll</button>
+        <!-- <button id="button1Roll2" type="click" class="btn-success btn btn-danger">player 1 roll x2</button> -->
         <button id="player1Hold" type="click" class="btn btn-warning">hold</button>
       </div>
-      
       <div class="column2" id="column2"> 
         <h3><strong>Player 2 Total Score:<span id="player2TotalScore"></span></strong></h3>
         <h3><strong>Player 2 Score:<span id="player2Score"></span></strong></h3>
-        <h3><strong>Player 2 last roll:<span id="player2LastRoll"></span></strong></h3>
+        <h3><strong>Player 2 dice 1:<span id="player2LastRoll"></span></strong></h3>
+        <h3><strong>Player 2 dice 2:<span id="player2Roll2"></span></strong></h3>
         <br>
-        <button id="button2" type="click" class="btn btn-success">player two roll</button>
+        <button id="button2" type="click" class="btn btn-success">player 2 roll</button>
+        <!-- <button id="button2Roll2" type="click" class="btn-success btn btn-danger">player 2 roll x2</button> -->
         <button id="player2Hold" type="click" class="btn btn-warning">hold</button>
       </div>
     </div>
