add new column, and h3 lines corrisponding with new AI logic.
Co-authored-by: Tyler Emmerson <tyleremmerson0216@gmail.com>

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <br>
   <div class="container">
     <div class="container"
-      <!-- <div class="row">
+      <div class="row">
       
       <div class="column1" id="column1"> 
         <h3><strong>Player 1 Total Score:<span id="player1TotalScore"></span></strong></h3>
         <h3><strong>Player 1 Score:<span id="player1Score"></span></strong></h3>
-        <h3><strong>Player 1 dice 1:<span id="player1LastRoll"></span></strong></h3>
+        <h3><strong>Player 1 dice 1:<span id="player1LastRoll1"></span></strong></h3>
         <h3><strong>Player 1 dice 2:<span id="player1Roll2"></span></strong></h3>
         <br>
         <button id="button1" type="click" class="btn-success btn btn-success">player 1 roll</button>
@@ -27,12 +27,22 @@
       <div class="column2" id="column2"> 
         <h3><strong>Player 2 Total Score:<span id="player2TotalScore"></span></strong></h3>
         <h3><strong>Player 2 Score:<span id="player2Score"></span></strong></h3>
-        <h3><strong>Player 2 dice 1:<span id="player2LastRoll"></span></strong></h3>
+        <h3><strong>Player 2 dice 1:<span id="player2LastRoll1"></span></strong></h3>
         <h3><strong>Player 2 dice 2:<span id="player2Roll2"></span></strong></h3>
         <br>
         <button id="button2" type="click" class="btn btn-success">player 2 roll</button>
         <!-- <button id="button2Roll2" type="click" class="btn-success btn btn-danger">player 2 roll x2</button> -->
         <button id="player2Hold" type="click" class="btn btn-warning">hold</button>
+      </div>
+      <div class="column3" id="column3"> 
+        <h3><strong>AI Total Score:<span id="AI1TotalScore"></span></strong></h3>
+        <h3><strong>AI dice 1:<span id="AIRoll1"></span></strong></h3>
+        <h3><strong>AI dice 2:<span id="AIRoll2"></span></strong></h3>
+        <h3><strong>AI second roll</strong></h3>
+        <h3><strong>AI dice 1:<span id="AIRoll3"></span></strong></h3>
+        <h3><strong>AI dice 2:<span id="AIRoll4"></span></strong></h3>
+        <br>
+        <button id="button3" type="click" class="btn btn-success">AI roll</button>
       </div>
     </div>
   <span id="winner"></span>
