add 4th column, add reset button, and some reformatting.
Co-authored-by: Tyler Emmerson <tyleremmerson0216@gmail.com>

--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
   <title>Pig dice</title>
 </head>
 <body>
+  <div id="Background">
   <br>
   <br>
   <div class="container">
-    <div class="container"
-      <div class="row">
-      
-      <div class="column1" id="column1"> 
+    
+      <div class="column1">
         <h3><strong>Player 1 Total Score:<span id="player1TotalScore"></span></strong></h3>
         <h3><strong>Player 1 Score:<span id="player1Score"></span></strong></h3>
         <h3><strong>Player 1 dice 1:<span id="player1LastRoll1"></span></strong></h3>
@@ -24,6 +23,7 @@
         <!-- <button id="button1Roll2" type="click" class="btn-success btn btn-danger">player 1 roll x2</button> -->
         <button id="player1Hold" type="click" class="btn btn-warning">hold</button>
       </div>
+
       <div class="column2" id="column2"> 
         <h3><strong>Player 2 Total Score:<span id="player2TotalScore"></span></strong></h3>
         <h3><strong>Player 2 Score:<span id="player2Score"></span></strong></h3>
@@ -34,6 +34,7 @@
         <!-- <button id="button2Roll2" type="click" class="btn-success btn btn-danger">player 2 roll x2</button> -->
         <button id="player2Hold" type="click" class="btn btn-warning">hold</button>
       </div>
+
       <div class="column3" id="column3"> 
         <h3><strong>AI Total Score:<span id="AI1TotalScore"></span></strong></h3>
         <h3><strong>AI dice 1:<span id="AIRoll1"></span></strong></h3>
@@ -44,7 +45,21 @@
         <br>
         <button id="button3" type="click" class="btn btn-success">AI roll</button>
       </div>
+      <button id="buttonReset" type="click" class="btn btn-success">RESET</button>
+
+      <div class="column4" id="column3"> 
+        <h3><strong>XXXXXXXXXXXXXXXXXXXXXX<span id="AI1TotalScore"></span></strong></h3>
+        <h3><strong>XXXXXXXXXXXXXXXXXXXXXX<span id="AIRoll1"></span></strong></h3>
+        <h3><strong>XXXXXXXXXXXXXXXXXXXXXX<span id="AIRoll2"></span></strong></h3>
+        <h3><strong>XXXXXXXXXXXXXXXXXXXXXX</strong></h3>
+        <h3><strong>XXXXXXXXXXXXXXXXXXXXXX<span id="AIRoll3"></span></strong></h3>
+        <h3><strong>XXXXXXXXXXXXXXXXXXXXXX<span id="AIRoll4"></span></strong></h3>
+        <h3><strong>XXXXXXXXXXXXXXXXXXXXXX<span id="AIRoll4"></span></strong></h3>
+        <h3><strong>XXXXXXXXXXXXXXXXXXXXXX<span id="AIRoll4"></span></strong></h3>
+        <!-- <button id="button3" type="click" class="btn btn-success">AI roll</button> -->
+      </div>
     </div>
-  <span id="winner"></span>
+  </div>
 </div>
 </body>
+</html>
