--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-  <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <script src="js/jquery-3.6.0.js"></script>
-  <script src="js/scripts.js"></script>
+  <link href="src/css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="src/css/styles.css" rel="stylesheet" type="text/css">
+  <script src="src/jquery-3.6.0.js"></script>
+  <script src="src/index.js"></script>
+  <script src="src/player.js"></script>
+  <script src="src/AI.js"></script>
   <title>Pig dice</title>
 </head>
 <body>
